force-app/main/default/objects/Income__c/Income__c.object-meta.xml
<CustomObject>
    <label>Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>