force-app/main/default/objects/Income__c/fields/Agricultural_Income__c.field-meta.xml
<CustomField>
    <fullName>Agricultural_Income__c</fullName>
    <label>Agricultural Income</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>