force-app/main/default/objects/Income__c/fields/Business_Income__c.field-meta.xml
<CustomField>
    <fullName>Business_Income__c</fullName>
    <label>Business Income</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>