force-app/main/default/objects/Income__c/fields/NRI_Income__c.field-meta.xml
<CustomField>
    <fullName>NRI_Income__c</fullName>
    <label>NRI Income</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>