force-app/main/default/objects/Income__c/fields/Other_Expected_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Expected_Income__c</fullName>
    <label>Other Expected Income</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>