force-app/main/default/objects/Income__c/fields/Pension_Income__c.field-meta.xml
<CustomField>
    <fullName>Pension_Income__c</fullName>
    <label>Pension Income</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>