force-app/main/default/objects/Income__c/fields/Salary_Income__c.field-meta.xml
<CustomField>
    <fullName>Salary_Income__c</fullName>
    <label>Salary Income</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>